assets/scss/custom.scss
/* ... */
.dark #services ol {
    &:before {
        background: #3a89cc;
        background: linear-gradient(180deg, #3a89cc 0%, #26c5f3 100%);
    }
}



 /**
 * Radio Button
 */
 .radio-field {
    display: flex;
    align-items: baseline;
    padding-left: 0;

    &:hover {
        color: $color-primary;
    }

    label {
        padding-left: 1rem;
        &:hover {
            cursor: pointer;
        }
    }

    .form-check-input[type="radio"] {
        float: none;
        flex-shrink: 0;
        width: $font-size;
        height: $font-size;
        border: 2px solid #414647;
        margin-top: 5px;
        margin-left: 0;
        background-color: unset;

        &:hover,
        &:focus {
          box-shadow: none;
        }

        &:focus {
            outline-width: 3px;
            outline-style: solid;
            outline-color: $color-primary;
            outline-offset: 4px;
        }

        &:checked {
            background-color: $color-primary;
            border-color: $color-primary;
        }
    }
 }

body.dark {
    .bg-white,
    .bg-light,
    .modal-content {
        background-color: $dark-body-light !important;
    }
    .radio-field {
        &:hover {
            color: $dark-color-primary;
        }
        .form-check-input[type="radio"] {
            border-color: #e4edef;
            background-color: #373A3A;
            &:focus {
                outline-color: $dark-color-primary;
            }

            &:checked {
                background-color: $dark-color-primary;
                border-color: $dark-color-primary;
                background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='%23373737'/></svg>");
            }
        }
    }
    .tab-btn-image,
    .accordion-image {
        &.icon-light {
            display: none;
        }
        &.icon-dark {
            display: block;
        }
    }

    .tab-pane {
        background-color: $dark-body-light !important;
        border-color: $dark-color-primary;
    }
    .accordion-item {
        background: $dark-body-bg;
        color: $dark-text-color;
    }
    .accordion-header {
        color: $white;
    }
    .accordion-button {
        &:active,
        &:focus,
        &.focus,
        &:focus-visible {
            outline: 3px solid $dark-color-primary;
        }

        &:not(.collapsed) {
            background-color: transparent;
            border-bottom: 1px solid $color-primary !important;
        }
    }
}
.footer {
	.footer-heading {
		color: $color-primary;

		.dark & {
			color: $dark-color-primary;
		}
	}

	.footer-list {
		color: $text-color;

		.dark & {
			color: $dark-text-color;
		}

        li {
            padding: 5px 0;
        }
		a {
			color: $text-color;
			text-decoration: underline;
            padding: 0;

			.dark & {
				color: $dark-text-color;
			}

			&:hover {
				color: $color-primary;

				.dark & {
					color: $dark-color-primary;
				}
			}
		}
	}

	.footer-center {
		display: flex;
		flex-direction: column;
		align-items: center;
	}

	.footer-right {
		text-align: right;
		a {
			display: inline-block;
		}
		img {
			display: block;
			width: 100%;
			max-width: 300px;
		}
	}

    .footer-nav {
        a {
            text-decoration: none;
        }
        .active {
            text-decoration: underline;
            color: $color-primary;
            .dark & {
                color: $dark-color-primary;
            }
        }
    }

	.footer-wcag {
		// padding: 1rem;
		color: $text-color;
	}

	.copyright-container {
		position: relative;
		display: flex;
		justify-content: center;
		width: 100%;
	}

	@media (max-width: 992px) { // Mobile
		.back-to-top-btn {
			margin-left: auto;
		}

		.copyright-container {
			flex-direction: column;
		}

		.copyright-label {
			order: 1;
			margin-top: 10px;
		}
	}

	@media (min-width: 992px) { // Desktop
		.back-to-top-btn {
			position: absolute;
			right: 0;
			top: 50%;
			transform: translateY(-50%);
		}
	}
}

.social-link {
    border-radius: 20px !important;
}

